# ChangeLog for app-text/nopaste
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/nopaste/ChangeLog,v 1.18 2007/11/08 16:11:30 drac Exp $

*nopaste-2802 (08 Nov 2007)

  08 Nov 2007; Samuli Suominen <drac@gentoo.org> +nopaste-2802.ebuild:
  Version bump with slightly better error handling wrt #193170, thanks to Aron
  Griffis.

  15 Oct 2007; Krzysiek Pawlik <nelchael@gentoo.org> nopaste-1992.ebuild:
  Remove x11-misc/xcut from RDEPEND.

  17 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> nopaste-1992.ebuild:
  Keyworded ~sparc wrt #189218

  13 Apr 2007; Torsten Veller <tove@gentoo.org> -nopaste-1252.ebuild,
  nopaste-1992.ebuild:
  Fixed HOMEPAGE. Reported by Charles Clément in #174445.
  Removed old version.

  08 Apr 2007; Markus Rothe <corsair@gentoo.org> nopaste-1992.ebuild:
  Added ~ppc64; bug #173258

  18 Dec 2006; Aron Griffis <agriffis@gentoo.org> nopaste-1992.ebuild:
  Stabilize everywhere

  22 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> nopaste-1992.ebuild:
  Add ~sparc-fbsd keyword.

*nopaste-1992 (15 Oct 2006)

  15 Oct 2006; Aron Griffis <agriffis@gentoo.org> +nopaste-1992.ebuild:
  Add options for --nick and --desc, plus add a helpful error message. Thanks
  to Bo Ørsted Andresen in #149066

  08 Sep 2006; Aron Griffis <agriffis@gentoo.org> nopaste-1252.ebuild:
  Mark 1252 stable on ia64

  03 Sep 2006; Jeroen Roovers <jer@gentoo.org> nopaste-1252.ebuild:
  Stable for HPPA.

  06 Aug 2006; Thomas Cort <tcort@gentoo.org> nopaste-1252.ebuild:
  Stable on alpha wrt Bug #138679.

  06 Aug 2006; Simon Stelling <blubb@gentoo.org> nopaste-1252.ebuild:
  stable on amd64

  16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org> nopaste-1252.ebuild:
  ppc stable, bug #138679

  15 Jul 2006; Joshua Jackson <tsunam@gentoo.org> nopaste-1252.ebuild:
  Stable x86; bug #138679

  20 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> nopaste-1252.ebuild:
  Add ~ppc keyword.
