@@ -1,11 +1,13 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/nopaste/nopaste-1992.ebuild,v 1.8 2007/10/15 08:12:06 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/nopaste/nopaste-2835.ebuild,v 1.1 2008/01/22 15:29:57 ulm Exp $
 
 EAPI="prefix"
 
+inherit eutils
+
 DESCRIPTION="command-line interface to rafb.net/paste"
-HOMEPAGE="http://n01se.net/agriffis/nopaste/"
+HOMEPAGE="http://n01se.net/agriffis/nopaste"
 SRC_URI="${HOMEPAGE}/${P}"
 
 LICENSE="GPL-2"
@@ -20,8 +22,13 @@ RDEPEND="${DEPEND}
 
 S=${WORKDIR}
 
+src_unpack() {
+	cp "${DISTDIR}/${P}" ${PN}
+	epatch "${FILESDIR}/${P}-output-redirect.patch"
+}
+
 src_install() {
-	newbin "${DISTDIR}"/${P} ${PN}
+	dobin ${PN} || die
 	sed -i -e "1s|^#!/usr/bin/ruby|#!${EPREFIX}/usr/bin/ruby|" \
 		"${ED}"/usr/bin/${PN}
 }
