@@ -1,6 +1,12 @@
 # ChangeLog for app-text/nopaste
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/nopaste/ChangeLog,v 1.18 2007/11/08 16:11:30 drac Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/nopaste/ChangeLog,v 1.19 2008/01/22 15:29:57 ulm Exp $
+
+*nopaste-2835 (22 Jan 2008)
+
+  22 Jan 2008; Ulrich Mueller <ulm@gentoo.org>
+  +files/nopaste-2835-output-redirect.patch, +nopaste-2835.ebuild:
+  Version bump. Fix output redirection, bug 205525.
 
 *nopaste-2802 (08 Nov 2007)
 
